--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,33 @@
 .App {
   text-align: center;
+  background-color: #3f3160;
+  min-height: 500px;
+  width: 400px;
+  margin: 40px auto;
 }
-
+#to-do-form input {
+  background-color: whitesmoke;
+  border: 0;
+  width: 200px;
+  height: 50px;
+  padding: 0 20px;
+  margin: 20px;
+  font-size: 18px;
+  border-radius: 10px;
+  color: #282c34;
+}
+#to-do-form input:focus {
+  outline: none;
+}
+#to-do-form button {
+  height: 50px;
+  width: 80px;
+  border-radius: 5px;
+  border: 0;
+  cursor: pointer;
+  font-weight: bolder;
+  background-color: coral;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +61,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+body {
+  background-color: #282c34;
 }
